<resources>
    <string name="app_name">Disney Characters</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="character_picture">Character Picture</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="no_data">Data Empty</string>
    <string name="fav_button_label">Favorite Button</string>
    <string name="tv_shows">TV Shows</string>
    <string name="films">Films</string>
    <string name="short_films">Short Films</string>
    <string name="park_attractions">Park Attractions</string>
    <string name="video_games">Video Games</string>
</resources>