<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.DisneyCharacters.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/character_picture"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/gradient_background" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.DisneyCharacters.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_shows" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tv_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@android:layout/simple_list_item_1" />

            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/films" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_films"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@android:layout/simple_list_item_1" />


            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_films" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_short_films"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@android:layout/simple_list_item_1" />


            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/park_attractions" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_p_attractions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@android:layout/simple_list_item_1" />


            <TextView
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_games" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_video_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@android:layout/simple_list_item_1" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/fav_button_label"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>